Fixed: card spacing via CSS

--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ section{
     display: flex;
     padding: 10px;
     margin: 2px;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
     height: fit-content;
@@ -73,7 +73,8 @@ section{
 
 .cardSection img {
     border-radius: 5px;
-    height: 200px;
+    /* height: 200px; */
+    width: 20%;
     margin: 5px;
     box-shadow: 10px 10px 27px 0px rgba(0,0,0,0.75);
 }
